--- a/index.html
+++ b/index.html
@@ -5,10 +5,22 @@
     <title>Blue Heaven</title>
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="css/reset.css">
     <link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
+
 <body>
-    
+    <header class="header">
+        <nav class="container header-container">
+            <a href="./"><img src="img/blue-heaven.svg" alt="Blue Heaven"></a>
+            <ul>
+                <li><a class="ativo" href="./">home</a></li>
+                <li><a href="sobre.html">sobre</a></li>
+                <li><a href="passeios.html">paesseios</a></li>
+                <li><a href="contato.html">contato</a></li>
+            </ul>
+        </nav>
+    </header>
 </body>
 </html>
