Adicionando código da main

--- a/index.html
+++ b/index.html
@@ -22,5 +22,13 @@
             </ul>
         </nav>
     </header>
+
+    <main class="main">
+        <div class="container">
+            <h1>descubra a sensasão de voar.</h1>
+            <p>Salto de paraquedas, voo de asas-delta e passeio de balão</p>
+            <a class="cta" href="contato.html">Agendar</a>
+        </div>
+    </main>
 </body>
 </html>
