Adicionando: passeios-home

--- a/index.html
+++ b/index.html
@@ -30,5 +30,33 @@
             <a class="cta" href="contato.html">Agendar</a>
         </div>
     </main>
+
+    <section class="passeios-home container">
+        <h2 class="titulo">Conheça os paesseios</h2>
+        <ul class="passeios-home-lista">
+            <li>
+                <h3>Paraquedas</h3>
+                <p>
+                    O paraquedismo é praticado por desportistas que saltam de aeronaves, ou lugares fixos (BASE jumping), fazendo uso de um paraquedas.
+                    <a href="passeios.html">Saiba mais »</a>
+                </p>
+            </li>
+            <li>
+                <h3>Asa-delta</h3>
+                <p>
+                    Asa-delta é um tipo de aeronave composta por tubos de alumínio, que proporcionam a sua rigidez estrutural, e uma vela feita de tecidos.
+                    <a href="passeios.html">Saiba mais »</a>
+                </p>
+            </li>
+            <li>
+                <h3>Balonismo</h3>
+                <p>
+                    O balonismo é um desporto aeronáutico praticado com um balão de ar quente. No Brasil, o esporte começou a popularizar-se a partir dos anos 90.
+                    <a href="passeios.html">Saiba mais »</a>
+                </p>
+            </li>
+        </ul>
+        <a class="cta" href="passeios.html">Ver todos</a>
+    </section>
 </body>
 </html>
