--- a/index.html
+++ b/index.html
@@ -58,5 +58,42 @@
         </ul>
         <a class="cta" href="passeios.html">Ver todos</a>
     </section>
+
+    <section class="depoimentos-home">
+        <div class="container">
+            <h2 class="titulo">Depoimentos dos clientes</h2>
+            <ul class="depoimentos-lista">
+                <li>
+                    <img src="img/icon.svg" alt="Icon">
+                    <div>
+                        <h3>Vicente Mattos</h3>
+                        <q>"Curti muito poder saltar de paraquedas pela primeira vez, foi uma experiência incrível. O mais engraçado foi quando eu vi como ficou minha cara nas fotos depois."</q>
+                    </div>
+                </li>
+                <li>
+                    <img src="img/icon.svg" alt="Icon">
+                    <div>
+                        <h3>Gabriel Nascimento</h3>
+                        <q>"Sem palavras para descrever como foi o passeio de asa-delta com a Blue Heaven. No começo eu estava um pouco ansioso mas depois fui aproveitando cada momento lá em cima. Incrível."</q>
+                    </div>
+                </li>
+                <li>
+                    <img src="img/icon.svg" alt="Icon">
+                    <div>
+                        <h3>Maria Fernanda</h3>
+                        <q>"Eu nunca vou esquecer essa sensação de estar lá nas alturas! Não é nada do jeito como eu imaginava. É mil vezes melhor. Uma sensação de liberdade sem igual!"</q>
+                    </div>
+                </li>
+                <li>
+                    <img src="img/icon.svg" alt="Icon">
+                    <div>
+                        <h3>Lucas Lemos</h3>
+                        <q>"Os instrutores da Blue Heaven são fantásticos. Tive a oportunidade de ir em tudo, nas duas primeiras vezes fui de paraquedas e de asa-delta e depois levei meu filho no balão."</q>
+                    </div>
+                </li>
+            </ul>
+            <a class="cta" href="passeios.html">Saiba mais</a>
+        </div>
+    </section>
 </body>
 </html>
