Adicionando: galeria-home

--- a/index.html
+++ b/index.html
@@ -92,8 +92,19 @@
                     </div>
                 </li>
             </ul>
-            <a class="cta" href="passeios.html">Saiba mais</a>
+            <a class="cta" href="sobre.html">Saiba mais</a>
         </div>
+    </section>
+
+    <section class="galeria-home container">
+        <h2 class="titulo">Galaeria de fotos</h2>
+        <ul class="galeria-lista">
+            <li><img src="img/paraquedas.jpg" alt="Paraquedas"></li>
+            <li><img src="img/balonismo.jpg" alt="Balonismo"></li>
+            <li><img src="img/salto-duplo.jpg" alt="Salto duplo"></li>
+            <li><img src="img/asa-delta.jpg" alt="Asa-delta"></li>
+        </ul>
+        <a class="cta" href="passeios.html">Ver mais</a>
     </section>
 </body>
 </html>
