Adicionando: sobre-home

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <ul>
                 <li><a class="ativo" href="./">home</a></li>
                 <li><a href="sobre.html">sobre</a></li>
-                <li><a href="passeios.html">paesseios</a></li>
+                <li><a href="passeios.html">passeios</a></li>
                 <li><a href="contato.html">contato</a></li>
             </ul>
         </nav>
@@ -105,6 +105,21 @@
             <li><img src="img/asa-delta.jpg" alt="Asa-delta"></li>
         </ul>
         <a class="cta" href="passeios.html">Ver mais</a>
+    </section>
+
+    <section class="sobre-home">
+        <div class="container">
+            <h2 class="titulo">Sobre a empresa</h2>
+            <div class="sobre-container">
+                <img src="img/blue-heaven-logo.svg" alt="blue Heaven">
+                <p>A Blue Heaven surgiu de um dos mais antigos sonhos da humanidade: o de poder voar. Ainda que não tivéssemos asas, nós queríamos usar a nossa imaginação e criatividade para juntos poder construir equipamentos seguros que possibilitassem tornar o sonho de se aventurar pelo céu, uma realidade. E foi isso o que fizemos.</p>
+            </div>
+            <blockquote class="sobre-quote">
+                "Gosto de pensar que somos um grupo de sonhadores e que, para nós, nem mesmo o céu é o limite."
+                <cite class="sobre-cite">- Fundador da Blue Heaven</cite>
+            </blockquote>
+            <a class="cta" href="sobre.html">Sobre</a>
+        </div>
     </section>
 </body>
 </html>
