Código do Projeto: Footer

--- a/index.html
+++ b/index.html
@@ -121,5 +121,51 @@
             <a class="cta" href="sobre.html">Sobre</a>
         </div>
     </section>
+
+    <footer class="footer">
+        <div class="container">
+            <ul class="footer-container">
+                <li>
+                    <h3>Localização</h3>
+                    <p>
+                        Rua Céu Azul, 123 <br />
+                        Bairro das Nuvens <br />
+                        São Paulo - SP
+                    </p>
+                    <a href="#">Clique aqui para abrir no mapa.</a>
+                </li>
+                <li>
+                    <h3>Mapa do site</h3>
+                    <ul class="mapa-do-site">
+                        <li><a href="./">- Home</a></li>
+                        <li><a href="sobre.html">- Sobre</a></li>
+                        <li><a href="passeios.html">- Passeios</a></li>
+                        <li><a href="contato.html">- Contato</a></li>
+                        <li><a href="trabalhe-conosco.html">- Trabalhe Conosco</a></li>
+                      </ul>
+                </li>
+                <li>
+                    <h3>Contato</h3>
+                    <ul class="footer-contato">
+                        <li><a href="tel:+5511999999999">+55 (11) 99999-9999</a></li>
+                        <li><a href="mailto:contato@blueheaven.com">contato@blueheaven.com</a></li>
+                    </ul>
+                </li>
+                <li>
+                    <h3>Redes sociais</h3>
+                    <ul class="redes-sociais">
+                        <li><a href="https://www.facebook.com" target="_blank"><img src="img/facebook.svg" alt="Facebook Blue Heaven"></a></li>
+                        <li><a href="https://www.instagram.com" target="_blank"><img src="img/instagram.svg" alt="Instagram Blue Heaven"></a></li>
+                        <li><a href="https://www.whatsapp.com" target="_blank"><img src="img/whatsapp.svg" alt="WhatsApp Blue Heaven"></a></li>
+                        <li><a href="https://www.youtube.com" target="_blank"><img src="img/youtube.svg" alt="YouTube Blue Heaven"></a></li>
+                    </ul>
+                </li>
+            </ul>
+        </div>
+        <div class="copyright">
+            <p>Copyright © 2020 Blue Heaven. Todos os direitos reservados.</p>
+            <p>Este site é um projeto Tiger Codes. Mais informações em tigercodes.com.br</p>
+          </div>
+    </footer>
 </body>
 </html>
