Corrigindo erros: de português e espaçamentos

--- a/passeios.html
+++ b/passeios.html
@@ -40,7 +40,7 @@
                 <h3>Paraquedas</h3>
                 <p>O paraquedismo é praticado por desportistas que saltam de aeronaves, ou lugares fixos (BASE jumping), fazendo uso de um paraquedas.</p>
                 <ul>
-                    <li>Ficha ténica</li>
+                    <li>Ficha técnica</li>
                     <li>Idade mínima: 16 anos (menores de idade devem ir acompanhados dos pais)</li>
                     <li>Peso máximo: 120 kg (por questões de segurança não recomendados peso superior)</li>
                     <li>Limite por pessoa: 2 (salto duplo somente com acompanhamento de instrutor)</li>
@@ -58,7 +58,7 @@
                 <h3>Asa-delta</h3>
                 <p>Asa-delta é um tipo de aeronave composta por tubos de alumínio, que proporcionam a sua rigidez estrutural, e uma vela feita de tecidos.</p>
                 <ul>
-                    <li>Ficha ténica</li>
+                    <li>Ficha técnica</li>
                     <li>Idade mínima: 16 anos (menores de idade devem ir acompanhados dos pais)</li>
                     <li>Peso máximo: 110 kg (por questões de segurança não recomendados peso superior)</li>
                     <li>Limite por pessoa: 2 (acompanhado de instrutor ou pessoa experiente)</li>
@@ -75,7 +75,7 @@
             <h3>Balonismo</h3>
             <p>O balonismo é um desporto aeronáutico praticado com um balão de ar quente. No Brasil, o esporte começou a popularizar-se a partir dos anos 90.</p>
             <ul>
-                <li>Ficha ténica</li>
+                <li>Ficha técnica</li>
                 <li>Idade mínima: 7 anos (menores de idade devem ir acompanhados dos pais)</li>
                 <li>Peso máximo: 86 kg (peso individual caso atinja o limite máximo de pessoas)</li>
                 <li>Limite por pessoa: 13 (incluindo o piloto do balão)</li>
@@ -87,7 +87,7 @@
 
     <section class="galeria">
         <div class="container">
-            <h2 class="titulo">Galaeria de fotos</h2>
+            <h2 class="titulo">Galeria de fotos</h2>
             <ul class="galeria-lista">
                 <li><img src="img/paraquedas.jpg" alt="Paraquedas"></li>
                 <li><img src="img/balonismo.jpg" alt="Balonismo"></li>
