--- a/index.html
+++ b/index.html
@@ -25,14 +25,14 @@
 
     <main class="main">
         <div class="container">
-            <h1>descubra a sensasão de voar.</h1>
-            <p>Salto de paraquedas, voo de asas-delta e passeio de balão</p>
+            <h1>descubra a sensação de voar.</h1>
+            <p>Salto de paraquedas, voo de asa-delta e passeio de balão.</p>
             <a class="cta" href="contato.html">Agendar</a>
         </div>
     </main>
 
     <section class="passeios-home container">
-        <h2 class="titulo">Conheça os paesseios</h2>
+        <h2 class="titulo">Conheça os passeios</h2>
         <ul class="passeios-home-lista">
             <li>
                 <h3>Paraquedas</h3>
@@ -73,15 +73,15 @@
                 <li>
                     <img src="img/icon.svg" alt="Icon">
                     <div>
-                        <h3>Gabriel Nascimento</h3>
-                        <q>"Sem palavras para descrever como foi o passeio de asa-delta com a Blue Heaven. No começo eu estava um pouco ansioso mas depois fui aproveitando cada momento lá em cima. Incrível."</q>
+                        <h3>Maria Fernanda</h3>
+                        <q>"Eu nunca vou esquecer essa sensação de estar lá nas alturas! Não é nada do jeito como eu imaginava. É mil vezes melhor. Uma sensação de liberdade sem igual!"</q>
                     </div>
                 </li>
                 <li>
                     <img src="img/icon.svg" alt="Icon">
                     <div>
-                        <h3>Maria Fernanda</h3>
-                        <q>"Eu nunca vou esquecer essa sensação de estar lá nas alturas! Não é nada do jeito como eu imaginava. É mil vezes melhor. Uma sensação de liberdade sem igual!"</q>
+                        <h3>Gabriel Nascimento</h3>
+                        <q>"Sem palavras para descrever como foi o passeio de asa-delta com a Blue Heaven. No começo eu estava um pouco ansioso mas depois fui aproveitando cada momento lá em cima. Incrível."</q>
                     </div>
                 </li>
                 <li>
@@ -97,7 +97,7 @@
     </section>
 
     <section class="galeria-home container">
-        <h2 class="titulo">Galaeria de fotos</h2>
+        <h2 class="titulo">Galeria de fotos</h2>
         <ul class="galeria-lista">
             <li><img src="img/paraquedas.jpg" alt="Paraquedas"></li>
             <li><img src="img/balonismo.jpg" alt="Balonismo"></li>
