Código do Projeto: Responsivo

--- a/trabalhe-conosco.html
+++ b/trabalhe-conosco.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" type="text/css" href="css/passeios.css">
     <link rel="stylesheet" type="text/css" href="css/contato.css">
     <link rel="stylesheet" type="text/css" href="css/trabalhe-conosco.css">
+    <link rel="stylesheet" type="text/css" href="css/responsivo.css">
 </head>
 
 <body>
