--- a/contato.html
+++ b/contato.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" type="text/css" href="css/sobre.css">
     <link rel="stylesheet" type="text/css" href="css/passeios.css">
     <link rel="stylesheet" type="text/css" href="css/contato.css">
+    <link rel="stylesheet" type="text/css" href="css/responsivo.css">
 </head>
 
 <body>
