--- a/passeios.html
+++ b/passeios.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" type="text/css" href="css/style.css">
     <link rel="stylesheet" type="text/css" href="css/sobre.css">
     <link rel="stylesheet" type="text/css" href="css/passeios.css">
+    <link rel="stylesheet" type="text/css" href="css/responsivo.css">
 </head>
 
 <body>
