--- a/sobre.html
+++ b/sobre.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" type="text/css" href="css/reset.css">
     <link rel="stylesheet" type="text/css" href="css/style.css">
     <link rel="stylesheet" type="text/css" href="css/sobre.css">
+    <link rel="stylesheet" type="text/css" href="css/responsivo.css">
 </head>
 
 <body>
