--- a/trabalhe-conosco.html
+++ b/trabalhe-conosco.html
@@ -13,6 +13,7 @@
     <link rel="stylesheet" type="text/css" href="css/contato.css">
     <link rel="stylesheet" type="text/css" href="css/trabalhe-conosco.css">
     <link rel="stylesheet" type="text/css" href="css/responsivo.css">
+    <script>document.documentElement.classList.add("js");</script>
 </head>
 
 <body>
@@ -29,13 +30,13 @@
     </header>
 
     <section class="main trabalhe-conosco">
-        <div class="container">
+        <div class="container" data-animate="scroll">
             <h1>Trabalhe Conosco</h1>
             <p>Junte-se ao time.</p>
         </div>
     </section>
 
-    <section class="container procura-se">
+    <section class="container procura-se" data-animate="scroll">
         <h2 class="titulo">Procuramos pessoas como você!</h2>
         <form class="form">
             <label for="nome">Nome</label>
@@ -96,5 +97,7 @@
             <p>Este site é um projeto Tiger Codes. Mais informações em tigercodes.com.br</p>
           </div>
     </footer>
+
+    <script src="./js/script.js" type="module"></script>
 </body>
 </html>
