--- a/index.html
+++ b/index.html
@@ -26,14 +26,14 @@
     </header>
 
     <main class="main">
-        <div class="container">
+        <div class="container" data-animate="scroll">
             <h1>descubra a sensação de voar.</h1>
             <p>Salto de paraquedas, voo de asa-delta e passeio de balão.</p>
             <a class="cta" href="contato.html">Agendar</a>
         </div>
     </main>
 
-    <section class="passeios-home container">
+    <section class="passeios-home container" data-animate="scroll">
         <h2 class="titulo">Conheça os passeios</h2>
         <ul class="passeios-home-lista">
             <li>
@@ -62,7 +62,7 @@
     </section>
 
     <section class="depoimentos-home">
-        <div class="container">
+        <div class="container" data-animate="scroll">
             <h2 class="titulo">Depoimentos dos clientes</h2>
             <ul class="depoimentos-lista">
                 <li>
@@ -98,7 +98,7 @@
         </div>
     </section>
 
-    <section class="galeria-home container">
+    <section class="galeria-home container" data-animate="scroll">
         <h2 class="titulo">Galeria de fotos</h2>
         <ul class="galeria-lista">
             <li><img src="img/paraquedas.jpg" alt="Paraquedas"></li>
@@ -110,7 +110,7 @@
     </section>
 
     <section class="sobre-home">
-        <div class="container">
+        <div class="container" data-animate="scroll">
             <h2 class="titulo">Sobre a empresa</h2>
             <div class="sobre-container">
                 <img src="img/blue-heaven-logo.svg" alt="blue Heaven">
