--- a/trabalhe-conosco.html
+++ b/trabalhe-conosco.html
@@ -20,7 +20,8 @@
     <header class="header">
         <nav class="container header-container">
             <a href="./"><img src="img/blue-heaven.svg" alt="Blue Heaven"></a>
-            <ul>
+            <button data-menu="hamburguer" aria-controls="menu">Menu</button>
+            <ul data-menu="lista" id="menu">
                 <li><a href="./">home</a></li>
                 <li><a href="sobre.html">sobre</a></li>
                 <li><a href="passeios.html">passeios</a></li>
