--- a/index.html
+++ b/index.html
@@ -2,9 +2,17 @@
 <html lang="pt-br">
 <head>
     <meta charset="UTF-8">
-    <title>Blue Heaven</title>
+    <title>Blue Heaven | Descubra a sensação de voar.</title>
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
+    <meta name="description" content="Agende salto de paraquedas, voo de asa-delta e passeio de balão." />
+    <meta property="og:title" content="Blue Heaven | Descubra a sensação de voar." />
+    <meta property="og:description" content="Agende salto de paraquedas, voo de asa-delta e passeio de balão." />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="#" />
+    <meta property="og:image" content="/img/og-blue-heaven.png" />
+
+    <link rel="shortcut icon" href="/img/favicon.ico" type="image/x-icon">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="css/reset.css">
     <link rel="stylesheet" type="text/css" href="css/style.css">
